# guardpost-core

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  client.py  docker-compose.yml  manage_test_resources.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 19efe4099d72_initial_schema_for_scans_and_findings.py  9376bdb6b6d5_add_details_column_to_findings_table.py  d41b56c6319a_add_llm_remediation_output_to_findings.py
app/: main.py
app/api/: deps.py
app/api/v1/: api.py  schemas.py
app/core/: celery_app.py  config.py  exceptions.py  security.py
app/crud/: crud_finding.py  crud_scan.py
app/db/: graph_db.py  models.py  session.py
app/providers/: aws_provider.py
app/services/: aws_scanner.py  graph_builder.py  graph_metrics.py  security_analyzer.py
app/services/analyzers/: __init__.py  ebs_analyzer.py  ec2_analyzer.py  iam_analyzer.py  lambda_analyzer.py  rds_analyzer.py  s3_analyzer.py  vpc_analyzer.py
app/services/graph/: constants.py  iam_relationship_builder.py  node_props_preparer.py  relationship_creator.py  schema_manager.py  utils.py
app/services/remediation/: __init__.py  ec2_guidance.py  iac_guidance.py  iam_guidance.py  lambda_guidance.py  llm_guidance.py  rds_guidance.py  risk_scoring.py  s3_guidance.py  schemas.py
app/services/scanners/: __init__.py  ebs_scanner.py  (+7 more)
client_lib/: __init__.py  auth.py  config.py  display.py  findings.py  scan.py
docs/: INDEX.md  architecture.md  aws_resource_properties.md  contributing.md  graph_schema.md  graph_schema_v1.md  llm_integration.md  workflow.md
(+19 files in other folders)
